--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
+    "sass": "^1.64.2",
     "styled-components": "^6.0.5",
     "zod": "^3.21.4"
   },
