--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["src"],
+    "include": ["src", "src/@custom/custom.d.ts"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
